# didactic-cplusplus-max-chacra

./: .gitignore  CMakeLists.txt  README.md  chatri.in  chatri.out
gen-coords/: CMakeLists.txt
gen-coords/src/: main.cpp
max-chacra/: CMakeLists.txt
max-chacra/include/: loader.hpp  loader_txt.hpp  recorder.hpp  recorder_txt.hpp
max-chacra/src/: loader_txt.cpp  main.cpp  recorder_txt.cpp
